# truenex-memory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: agent-discovery-bootstrap.md  ingestion.md  installation.md  phase-2-5-design-decisions.md  phase-3-auto-memory-design.md  release.md  testing.md
examples/sample_project/: README.md
examples/sample_project/docs/: architecture.md  decisions.md
releases/: version.json
scripts/: bump_version.py
src/truenex_memory/: __init__.py
src/truenex_memory/adapters/: __init__.py  __main__.py  agents_md.py  claude_md.py
tests/e2e/: test_clean_install_cli.py  test_mcp_stdio_session.py
tests/integration/: test_qdrant_integration.py
tests/unit/: cli_output.py  test_auto_memory.py  test_chunker.py  test_cli.py  test_cli_core.py  test_cli_semantic_persistence.py  test_diagnostics.py  test_discovery.py  test_doctor_vector_status.py  test_embedder.py  test_export.py  test_global_context.py  test_global_refresh.py  test_global_search.py  test_global_status.py  test_import.py  test_index_semantic.py  test_ingestion.py  test_mcp_server.py  test_mcp_tools.py  test_migration.py  test_phase3_cli_auto.py  test_phase3_cli_auto_lifecycle.py  test_phase3_cli_auto_review.py  test_phase3_cli_auto_status.py  test_phase3_retrieval_gate.py  test_qdrant_store.py  test_quickstart_sample.py  test_release_update.py  test_repository.py  test_scoring.py  test_semantic_retrieval.py  test_source_catalog.py  test_source_health.py  test_source_ledger.py  test_store.py  test_task_store.py  test_vector_config.py
(+54 files in other folders)
